# X11tile

./: CMakeLists.txt  README.md  compile_commands.json
include/: layout.h  mainwindow.h  zone.h
src/: layout.c  main.c  mainwindow.c  zone.c
